# Quant_alpha

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  LOG.md  TODO.md  WHITEPAPER .md  docker-compose.yml  init_db.sh  migration_history.md  pyproject.toml  restore_db.sh  verify.sh
.claude/: settings.json
.claude/agents/: builder.md  code-reviewer.md  complex-parser.md  data-connector.md  factor-calculator.md  ic-validator.md  orchestrator.md  prefect-worker.md  reviewer.md  strategy-optimizer.md  test-writer.md  validator.md
.claude/commands/: add-factor.md  optimize-portfolio.md
docs/: architecture.md
docs/domain/: dart-parsing.md  factor-taxonomy.md  optimization.md  point-in-time.md  scheduling.md
docs/tasks/: 2026-04-29_L1_Ingestion_plan.md  2026-04-29_L1_Ingestion_task.md  2026-04-29_L5_Dashboard_plan.md  2026-04-29_L5_Dashboard_task.md  2026-05-01_biz-workspace_plan.md  2026-05-01_kyobo-workspace_plan.md  2026-05-01_kyobo-workspace_task.md  2026-05-01_repo-strategy-analysis.md  2026-05-02_design_watcher_plan.md  daily_log.md
flows/: serve_l1_pipeline.py
grafana/provisioning/dashboards/: dashboard.yml  (+1 more)
kyobo_template/: 250902_손해보험진출 통합본_v0.88_공유.docx  _analysis_output.txt  _analysis_result.json  _pdf_extract.txt  _summary.md  analyze_docs.py  summarize_docs.py  웹3 패러다임 대응전략_251201.docx  전략적투자심사위원회심사요청_IQUW_1028.docx  전략투심위및협의회요청서양식_ClearwaterUW_v1_251118.docx  최종수정본-[기획안]시니어 비즈니스 추진안_데이케어센터중심_241021_v4.docx
scripts/: backfill_daily.py
src/quant_alpha/: __init__.py
tests/: conftest.py
tests/l1_ingestion/: test_fetcher.py  test_loader.py
(+20 files in other folders)
