[tool.poetry]
name = "quant-alpha"
version = "0.1.0"
description = "5-Layer Quant Trading System (L1 Ingestion → L5 Monitor)"
authors = ["keonyoungss90@gmail.com"]
readme = "README.md"
packages = [{ include = "quant_alpha", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Data & Computation
pandas = "^2.2"
numpy = "^1.26"
scipy = "^1.13"
scikit-learn = "^1.5"
cvxpy = "^1.5"
duckdb = "^1.0"

# AI / Claude
anthropic = "^0.34"

# Infrastructure
redis = "^5.0"
psycopg2-binary = "^2.9"
sqlalchemy = "^2.0"
prefect = "^3.0"
tenacity = "^9.0"

# Config & Logging
pydantic-settings = "^2.4"
structlog = "^24.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
pytest-asyncio = "^0.24"
mypy = "^1.11"
ruff = "^0.6"
pandas-stubs = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
